# ffmpeg_compile

./: build.sh  get_sources.sh  get_soures.sh
cross_linux/: build.sh  compiler.sh  cross_config.cmake  get_source.sh  init_env.sh  native_build.sh  setvars.sh  step_build.sh  stepbuild.sh
cross_linux/config/: cross_for_windows.cmake  cross_for_windows_meson.txt  cross_meson.txt
cross_linux/patches/: zlib-1.3-CMakeLists.txt
cross_linux/patches/bzip2/: CMakeLists.txt  bzip2-config.cmake.in
cross_linux/patches/bzip2-1.0.8/: CMakeLists.txt  CMakeOptions.txt  bz2.pc.in  bzip2.pc.in  meson.build  meson_options.txt
cross_linux/patches/bzip2/cmake/: Version.cmake
cross_linux/patches/freetype2-2.13.2/: freetype2-2.13.2.diff
cross_linux/patches/lame-3.100/: CMakeLists.txt  lame.pc.in
cross_linux/patches/libvpx-1.13.1/: libvpx-1.13.1.diff
cross_linux/patches/x265-3.5/: x265-asm.patch  x265_asm.1.diff  x265_asm.2.diff  x265_asm.3.diff
cross_linux/patches/zlib-1.3/: CMakeLists.txt
macos/: build.sh  common.sh  do_test.sh  doc  get_source.sh
macos/script/: ios_common.sh
msys/: build.sh  get_source.sh
